Upgrade Windows bkp

--- a/deploy.agent.windows.yml
+++ b/deploy.agent.windows.yml
@@ -13,13 +13,14 @@
 - name: Playbook de instalação do Agente Windows .
   hosts:
     - DC02
+    - DC01
   vars:
     - zbx_front: 192.168.3.100
     - proxy_name: 'PROXY-SP'
     - zbx_proxy: 192.168.3.130
     - host_grupo: Matriz-A
   roles:
-    - role: zabbix_agent
-    #- role: zabbix_agent_uninstall_windows
+    #- role: zabbix_agent
+    - role: zabbix_agent_uninstall_windows
 #-----------------------------------------------------------------------#
 
