--- a/roles/zabbix_agent/defaults/main.yml
+++ b/roles/zabbix_agent/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
 # defaults file for install_zabbix_agent_linux
+
+zabbix_agent_service: zabbix-agent2.service
+zabbix_win_agent_service: Zabbix Agent 2
