--- a/deploy.agent.yml
+++ b/deploy.agent.yml
@@ -1,14 +1,14 @@
 #--------------------------------------------------------------#
-- name: Playbook de instalação do Agentes de hosts no Zabbix .
-  hosts:
-    - vagrant
-  vars:
-    - proxy_name: 'PROXY-SP'
-    - zbx_proxy: 192.168.3.130
-    - host_grupo: Empresa-X
+# - name: Playbook de instalação do Agentes de hosts no Zabbix .
+#   hosts:
+#     - DC01
+#   vars:
+#     - proxy_name: 'PROXY-SP'
+#     - zbx_proxy: 192.168.3.130
+#     - host_grupo: Empresa-X
     
-  roles:
-    - role: zabbix_agent
+#   roles:
+#     - role: zabbix_agent
 #-----------------------------------------------------------------------#
 - name: Playbook de instalação do Agentes de hosts no Zabbix .
   hosts:
