--- a/roles/zabbix_agent/tasks/ubuntu.yml
+++ b/roles/zabbix_agent/tasks/ubuntu.yml
@@ -39,6 +39,7 @@
     name: zabbix-agent2
     state: restarted
     enabled: yes
+  notify: restart linux zabbix-agent
   tags: zabbix_agent2
 #-------------------------------------------------------------------------------------------------#
 
