--- a/roles/zabbix_agent/tasks/windows.yml
+++ b/roles/zabbix_agent/tasks/windows.yml
@@ -20,17 +20,18 @@
 - debug:
     msg: '{{ zabbix_win_exe_info }}'
 
-- name: Checando Update (Set default)
+- name: Checando Update Default
   set_fact:
     update_zabbix_agent: False
   when:
     - agent_file_info.stat.exists
 
-- name: Checando Update
+- name: Checando Update - Realizar Upgrade versao 
   set_fact:
     update_zabbix_agent: True
   when:
     - agent_file_info.stat.exists
+    - "{% if zabbix_win_exe_info.win_file_version.product_version ('4.0.0', '>=') %}{% else %} {{ zabbix_win_exe_info.win_file_version.product_version}} {% endif %}"
 
 - name: Parando o Service Zabbix (Update)
   win_service:
