--- a/roles/allone_zabbix/defaults/main.yml
+++ b/roles/allone_zabbix/defaults/main.yml
@@ -11,11 +11,11 @@ packages_mysql:
 packages_zabbix_server:
   - zabbix-server-mysql
   - zabbix-agent2
-  - zabbix-sql-scripts
-  - zabbix-selinux-policy
+  #- zabbix-sql-scripts
+  #- zabbix-selinux-policy
   - zabbix-get
   - zabbix-sender
   - zabbix-apache-conf
   - zabbix-web-mysql
   - httpd
-  - zabbix-web-service
+  - zabbix-web-mysql
