--- a/roles/allone_zabbix/tasks/allonezabbix.yml
+++ b/roles/allone_zabbix/tasks/allonezabbix.yml
@@ -63,8 +63,8 @@
     login_host: localhost
     login_user: 'root'
     login_password: '{{ root_pass }}'
-    encoding: utf8mb4
-    collation: utf8mb4_bin
+    encoding: utf8
+    collation: utf8_bin
     state: present
   tags: zabbix_mydb
 
@@ -120,7 +120,9 @@
   tags: zabbix_mydb
 #--------------------------------------------------------------------------------#
 - name: Importando schema da database do zabbix servidor
-  shell: zcat /usr/share/doc/zabbix-sql-scripts/mysql/server.sql.gz | mysql -u zabbix -pzabbix zabbix
+  #shell: zcat /usr/share/doc/zabbix-sql-scripts/mysql/server.sql.gz | mysql -u zabbix -pzabbix zabbix
+  # versoes abaixo da 6.
+  shell: zcat /usr/share/doc/zabbix-server-mysql/create.sql.gz | mysql -u zabbix -pzabbix zabbix
   ignore_errors: yes
   tags: zabbix_mydb
 # --------------------------------------------------------------------------------------------#
