--- a/deploy.agent.yml
+++ b/deploy.agent.yml
@@ -12,11 +12,11 @@
 #-----------------------------------------------------------------------#
 - name: Playbook de instalação do Agentes de hosts no Zabbix .
   hosts:
-      - DC02
+      - vagrant
   vars:
      - proxy_name: 'PROXY-SP'
      - zbx_proxy: 192.168.3.130
-     - host_grupo: Empresa-Y
+     - host_grupo: NEW-YORK
        
   roles:
      - role: zabbix_agent
