--- a/roles/zabbix_agent/tasks/redhat.yml
+++ b/roles/zabbix_agent/tasks/redhat.yml
@@ -44,7 +44,7 @@
     name: zabbix-agent2
     state: started
     enabled: yes
-  notify: restart linux zabbix-agent
+  notify: restart linux zabbix-agent2
   tags: zabbix_agent2
 #-------------------------------------------------------------------------------#
 - name: Reload no firewalld 
