--- a/roles/zabbix_agent/tasks/ubuntu.yml
+++ b/roles/zabbix_agent/tasks/ubuntu.yml
@@ -39,7 +39,7 @@
     name: zabbix-agent2
     state: restarted
     enabled: yes
-  notify: restart linux zabbix-agent
+  notify: restart linux zabbix-agent2
   tags: zabbix_agent2
 #-------------------------------------------------------------------------------------------------#
 
