--- a/roles/zabbix_proxy/tasks/api.proxy.create.yml
+++ b/roles/zabbix_proxy/tasks/api.proxy.create.yml
@@ -2,7 +2,7 @@
 - name: Criando Grupo de host no Frontend do Zabbix
   local_action:
     module: community.zabbix.zabbix_group
-    server_url: http://{{ zbx_front }}/zabbix/
+    server_url: http://{{ allonezbx }}/zabbix/
     login_user: '{{ username }}'
     login_password: '{{ password }}'
     state: present
@@ -11,7 +11,7 @@
 - name: Criar o Proxy Modo Active.
   local_action:
     module: community.zabbix.zabbix_proxy
-    server_url: http://{{ zbx_front }}/zabbix/
+    server_url: http://{{ allonezbx }}/zabbix/
     login_user: '{{ username }}'
     login_password: '{{ password }}'
     proxy_name: '{{ proxy_name }}'
@@ -26,7 +26,7 @@
 - name: Criando Proxy no Frontend do zabbix .
   local_action:
     module: community.zabbix.zabbix_host
-    server_url: http://{{ zbx_front }}/zabbix/
+    server_url: http://{{ allonezbx }}/zabbix/
     login_user: '{{ username }}'
     login_password: '{{ password }}'
     host_name: "{{ansible_fqdn}}"
@@ -35,7 +35,7 @@
       - '{{ host_grupo }}'
     link_templates:
       - Linux by Zabbix agent active
-      - Zabbix proxy health
+      - Zabbix Proxy
       - ICMP Ping
     status: enabled
     state: present
